# llm-std

./: .gitignore
langchain-std/: .env.sample  README.md  pyproject.toml
langchain-std/quickstart/: default_llm_openai.py  structure_json.py
llm-std-py/: .env.sample  .gitignore  README.md  main.py  pyproject.toml
llm-std-py/agent/: simple_custormer_support_agent.py
llm-std-py/agent_react/: langgraph_agent_1.py  langgraph_agent_2.py  langgraph_agent_3.py  reflect_agent.py  subgraph_1.py  subgraph_2.py  supervisor.py
llm-std-py/cacheing/: inmemory_cache.py  sqlite_cache.py
llm-std-py/config/: load_sys.py
llm-std-py/exam/: lang_test.py  movie_review.py  multimodal_chroma.py  songs.py
llm-std-py/huggingface/: huggingface_std.py  prompt_engine.py  trans.py
llm-std-py/lamaindex/basic/: rag_basic_1.py
llm-std-py/lang_graph/: calc_graph.py  chain_architecture.py  chat_msg_mem_sys.py  check_pointer_graph.py  create_state_graph.py  data_process_node.py  filter_std.py  graph_command.py  graph_default.py  graph_edge2.py  graph_edge_std.py  graph_map_reduce.py  llm_architecture.py  merge_run_std.py  number_compare_gp.py  router_architecture.py  trimmer_std.py
llm-std-py/lcel/: lcel.py  parallel.py
llm-std-py/memory/: conversation_buf_mem.py  conversation_buf_window_mem.py  conversation_entity_mem.py  conversation_kg_mem.py  conversation_summary_mem.py  conversation_token_buf_mem.py  vector_store_mem.py
llm-std-py/open-ai-std/: openai_std.py
llm-std-py/outputparser/: comma_parser.py  enum_parser.py  json_parser.py  py_output_parser.py  structed_output_parser.py
llm-std-py/prompt/: prompts.py
llm-std-py/quickstart/: chat_model_gemini.py  chat_model_openai.py  chat_template.py  common_interface.py  default_llm_gemini.py  imperative_composition.py  lcel_structure.py  prompt_template.py  prompt_template_gemini.py
llm-std-py/rag/: ColBERT_embeddings.py  doc_to_text.py  embedding_of_doc.py  hyde_query.py  indexing_2.py  indexing_pg.py  markdown_recursive_splitter.py  multi_vector_retriever.py  multiple_query.py  pdf_loader.py  python_recursive_splitter.py  quert_transformation.py  rag.py  rag_std1.py  recursive_text_splitter.py  rrf_query.py  text_load_to_embedding.py  web_base_loader.py
llm-std-py/rag/data/: ateention.txt  (+2 more)
llm-std-py/retriever/: hello.text  retriever-test.py
llm-std-py/transformer/: attention.py  cross_attention.py  embbeding.py  feedforward.py  multihead_attention.py  token_embedding.py  trans_encode.py
llm-std-py/vectordb-docker/: docker-compose.yml
(+5 files in other folders)
