[project]
name = "langchain-std"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.4",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "python-dotenv>=1.2.1",
]
