[project]
name = "llm-std-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.5.0",
    "langchain>=1.2.6",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.7",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.1.0",
    "numpy>=2.4.1",
    "pandas-stubs~=2.3.3",
    "python-dotenv>=1.2.1",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
]
