[project]
name = "llm-std-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "datasets>=2.19.0",
    "faiss-cpu>=1.8.0",
    "huggingface-hub>=0.23.0",
    "langchain>=1.2.6",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "google-generativeai>=0.5.0",
    "ollama>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "llama-cpp-python>=0.2.79",
    "numpy~=2.4.1",
    "pandas-stubs~=2.3.3",
    "pypdf>=4.2.0",
    "python-dotenv>=1.2.1",
    "ragatouille>=0.0.8,<0.0.10",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.6",
    "psutil>=7.2.1",
    "langchain-text-splitters>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-postgres>=0.0.16",
    "langchain-openai>=1.1.7",
    "langchain-google-genai>=4.2.0",
    "langchain-ollama>=1.0.1",
    "accelerate>=1.12.0",
    "langchain-huggingface>=1.2.0",
    "vectorstore>=0.0.0",
    "lark>=1.3.1",
    "langchain-teddynote>=0.5.4",
    "langgraph>=1.0.6",
    "duckduckgo-search>=8.1.1",
    "ddgs>=9.10.0",
    "matplotlib>=3.10.8",
    "open-clip-torch>=3.2.0",
    "langchain-experimental>=0.4.1",
    "image>=1.5.33",
    "ipython>=9.9.0",
]
